# vec-playbook

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  download_model.py  pyproject.toml  run_in_container.sh  run_in_venv.sh  scripts.md
configs/: _global.yaml  user.yaml
configs/compute/killarney/: l40s_1x.yaml
configs/compute/vaughan/: a40_1x.yaml
getting-started/: README.md  introduction-to-vector-compute.md
getting-started/introduction-to-vector-compute/: README.md  hello_killarney.sh  hello_killarney_multinode.sh
getting-started/introduction-to-vector-compute/imagenet/: README.md  imagenet.example.out  imagenet.sh
getting-started/introduction-to-vector-compute/imagenet-multinode/: imagenet-multinode.example.out
getting-started/slurm-examples/: README.md
getting-started/slurm-examples/hello-killarney/: README.md  hello-killarney.example.out  hello-killarney.sh
getting-started/slurm-examples/hello-killarney-multinode/: README.md  hello-killarney-multinode.example.out  hello-killarney-multinode.example.worker-0.out  hello-killarney-multinode.example.worker-1.out  hello-killarney-multinode.example.worker-2.out  hello-killarney-multinode.example.worker-3.out  hello-killarney-multinode.sh
getting-started/slurm-examples/imagenet/: README.md  imagenet.sh
getting-started/slurm-examples/imagenet-multinode/: README.md  imagenet-multinode.example.worker-0.out  imagenet-multinode.example.worker-1.out  imagenet-multinode.example.worker-2.out  imagenet-multinode.example.worker-3.out  imagenet-multinode.sh  requirements.txt
getting-started/slurm-examples/imagenet-multinode/imagenet-multinode-venv/: pyvenv.cfg
getting-started/slurm-examples/imagenet/imagenet-venv/: pyvenv.cfg
getting-started/slurm-examples/jupyter-server/: README.md  jupyter-server.example.out  jupyter-server.sh  requirements.txt
getting-started/slurm-examples/timeout-requeue/: README.md  checkpoint.json  time-loop.py  timeout-requeue.919182.out  timeout-requeue.919355.out  timeout-requeue.919381.out  timeout-requeue.sh
getting-started/slurm-examples/vscode-server/: README.md  vscode-server.example.out  vscode-server.sh
scripts/: train.py
starters/: __init__.py
starters/llm/: README.md  __init__.py
starters/llm/text_classification/: __init__.py  config.yaml  runner.py
starters/llm_fine_tuning/: README.md  __init__.py
starters/llm_fine_tuning/rlvr/: README.md  shared_types.py  submitit_vllm.py  vllm_launcher.py
starters/llm_fine_tuning/rlvr/agents/: examples.py  rollout_translation.py
starters/llm_fine_tuning/rlvr/agents_integration/: notes.md  rollout_translation.py
starters/llm_fine_tuning/rlvr/data_collation/: batch.py  data_types.py
starters/llm_fine_tuning/rlvr/grpo/: data_types.py  grpo.py  rollout_generation.py  trainer.py
starters/llm_fine_tuning/text_classification/: __init__.py  config.yaml  launch.sh  launch_sweep.sh  sweep_config.yaml  trainer.py
starters/mlp/: __init__.py
starters/mlp/ddp/: trainer.py
starters/mlp/single/: __init__.py
starters/mlp/single_not_checkpointable/: README.md
starters/simple_nn/ddp/: __init__.py
starters/simple_nn/single/: trainer.py
starters/vlm/image_captioning/: __init__.py  config.yaml  launch.sh  trainer.py
templates/: README.md
templates/configs/: __init__.py  _global.yaml  user.yaml
templates/configs/compute/bon_echo/: a100_1x.yaml  a100_4x.yaml  a40_1x.yaml  a40_2x.yaml  a40_4x.yaml  cpu_1x.yaml  run_in_container.sh  run_in_venv.sh
templates/configs/compute/killarney/: cpu_1x.yaml  h100_1x.yaml  h100_2x.yaml  h100_4x.yaml  h100_8x.yaml  l40s_1x.yaml  l40s_2x.yaml  l40s_4x.yaml
templates/configs/compute/vaughan/: a40_1x.yaml  a40_2x.yaml  cpu_1x.yaml  run_in_container.sh  run_in_venv.sh
templates/configs/requeue/: off.yaml  on.yaml
templates/configs/starters/: llm_text_classification.yaml
templates/src/: __init__.py
templates/src/llm/: README.md  __init__.py
templates/src/llm/finetune_distributed/: README.md  __init__.py  config.yaml  distributed_launcher.py  launch.py  train.py  trainer_core.py
templates/src/llm/text_classification/: __init__.py  config.yaml  launch.py  train.py
templates/src/mlp/: README.md  __init__.py
templates/src/mlp/ddp/: README.md  __init__.py  config.yaml  launch.py  train.py
templates/src/mlp/single/: __init__.py  config.yaml  launch.py  train.py
templates/src/mlp/single_not_checkpointable/: __init__.py  config.yaml  launch.py  launch.sh  train.py  trainer.py
templates/src/rl/: __init__.py
templates/src/rl/rlvr/: README.md  __init__.py  async_utils.py  bon_echo_setup.md  langfuse.py  submitit_vllm.py
templates/src/rl/rlvr/agents_integration/: __init__.py  logging_utils.py  rollout_translation.py
templates/src/rl/rlvr/data_collation/: __init__.py  batch.py  data_types.py
templates/src/rl/rlvr/grpo/: __init__.py  config.yaml  data_types.py  grpo_backend.py  grpo_frontend.py  launch.py  rollout_generation.py  train.py
templates/src/rlvr/: README.md  async_utils.py  langfuse.py  progress_utils.py  submitit_vllm.py
templates/src/rlvr/agents_integration/: examples.py  rollout_translation.py
templates/src/rlvr/data_collation/: batch.py
templates/src/rlvr/grpo/: config.py  config.yaml  data_types.py  grpo.py  grpo_backend.py  grpo_frontend.py  launch.py  rollout_generation.py  train.py  trainer.py  vllm_base.yaml
templates/src/rlvr/grpo/tests/: submitit_local_executor.py  (+1 more)
templates/src/vlm/: README.md  __init__.py
templates/src/vlm/image_captioning/: __init__.py  config.yaml  launch.py  train.py
(+1 files in other folders)
